# anthology-of-data-science.github.io

./: .gitignore  .nojekyll  AGENTS.md  CNAME  README.md  _quarto.yml  about.html  books-listing.json  books.html  books.llms.md  books.qmd  index.html  index.llms.md  index.qmd  justfile  lectures.html  lectures.llms.md  lectures.qmd  listings.json  llms.txt  mozilla.scss  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css
altair/: better-altair-theme.html  better-altair-theme.out.ipynb  comet-chart.html  comet-chart.ipynb  comet-chart.qmd  curriculum.html  index-listing.json  index.html  index.qmd  video-altair-data-types.html  video-altair-grammar.html  video-altair-intro.html  video-altair-intro.qmd
basics/: index.html  index.qmd  precision-recall.html  r2d3-decision-tree.html  r2d3-decision-tree.qmd  stop-aggregating-signal.html
books/: books.yml  causal.html  causal.llms.md  causal.qmd  cds.html  cds.llms.md  cds.qmd  ethics.html  ethics.llms.md  ethics.qmd  fairml.html  fairml.llms.md  fairml.qmd  fdv.html  fdv.llms.md  fdv.qmd  fpp.html  fpp.llms.md  fpp.qmd  iml.html  iml.llms.md  iml.qmd  ims2.html  ims2.llms.md  ims2.qmd  islp.html  islp.llms.md  islp.qmd  mml.html  mml.llms.md  mml.qmd  pda.html  pda.llms.md  pda.qmd  r4ds.html  r4ds.llms.md  r4ds.qmd  shalizi.html  shalizi.llms.md  shalizi.qmd  (+9 more)
cases/: index.html  index.llms.md  index.qmd
demystifying/: index.html  r2d3-decision-tree.html
lectures/: composable-data-stack.html  composable-data-stack.llms.md  composable-data-stack.qmd  engineering-part-2.html  gam-ebm.html  (+13 more)
(+157 files in other folders)
