[tool.poetry]
name = "anthology-of-data-science"
version = "0.1.0"
description = ""
authors = ["Daniel Kapitan <daniel@kapitan.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vega-datasets = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
