[project]
name = "anthology-of-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "graphviz>=0.21",
    "great-tables>=0.18.0",
    "ibis-framework[duckdb,polars]>=10.8.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "polars>=1.33.1",
    "ppscore>=1.3.0",
    "pycaret>=3.3.2",
    "requests>=2.32.5",
    "ruff>=0.13.0",
    "scikit-learn>=1.4.2",
    "seaborn>=0.13.2",
    "sf-hamilton[visualization]>=1.88.0",
    "shap>=0.48.0",
    "vega-datasets>=0.9.0",
    "vegafusion>=2.0.2",
    "vegafusion-python-embed>=1.6.9",
    "vl-convert-python>=1.8.0",
    "xgboost>=3.0.5",
    "ydata-profiling>=4.16.1",
]
